	* FIX issue #M18489: Fatal error using non existing int() function
	* FIX issue #M8725: Missing microformat classes for email, mobile, fax
	* FIX issue #M7095: Add link wizard to www field
	* FIX issue #M7060: Sorting of address items not working if set in FlexForm (Thanks Uwe Schmelzer)
	* FIX issue #M18391: tt_address cannot be configured using TypoScript anymore (Thanks Gabriel Kaufmann)

2011-08-08 Michael Miousse <mmiousse@infoglobe.ca>
	* ADD added feature #18242, Missing stdWrap on groupSelection
	* FIX fixed issue #16711, Do not limit the size of varchar fields
	* FIX fixed issue #10603, SQL Errors in ext_tables.sql prevent correct installation (tt_address 2.2.1), credits Jochen Rieger

2007-12-23 Ingo Renner	<typo3@ingo-renner.com>

	* ADD added building and room fields
	* ADD added feature #5859, stdWrap on singleSelection
	* ADD added feature #5867, support for up to TT_ADDRESS_MAX_IMAGES images, credits Christian Tauscher
	* ADD added allWrap property for templates
	* CHG now the compatibility function updates the old name field only if the new separated name fields are not empty
	* FIX fixed bug #5861: configure Frontend Plugin: AND / OR allways works as AND
	* UPD updated manual

2007-10-15 Ingo Renner	<typo3@ingo-renner.com>

	!!! moved old TS constants and setup (content.tt_address) into static templates

	* UPD updated manual
	* FIX added image to the fe_admin_fieldList in TCA
	* FIX fixed issue #6448, typo in sorting criteria city
	* ADD added feature #1818, gender field, new marker ###GENDER###
	* ADD added birthday field, new marker ###BIRTHDAY###
	* ADD added feature #5436, max items in list feature (bug 5436: Featurewish: a possibiliy to limit the max items shows in FE per page)

2007-04-11 Ingo Renner	<typo3@ingo-renner.com>

	* FIX fixed label when old combined name field is turned off
	* ADD added sorting settings to the flexform
	* ADD added some wraps

2007-03-26 Ingo Renner	<typo3@ingo-renner.com>
