@@ -380,26 +380,22 @@ $TCA['tt_address_group'] = array(
 );
 
 
-//-- start splitting name into first and last name
-
+	// start splitting name into first and last name
 $extConf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['tt_address']);
 
-// original values
+	// original values
 $showitemOrig            = $TCA['tt_address']['types'][1]['showitem'];
 $showRecordFieldListOrig = $TCA['tt_address']['interface']['showRecordFieldList'];
-$fe_admin_fieldListOrig  = $TCA['tt_address']['feInterface']['fe_admin_fieldList'];
 
-// shows both, the old and the new fields while converting to the new fields
+	// shows both, the old and the new fields while converting to the new fields
 $showItemReplace = ' name, first_name, middle_name, last_name;;2;;,';
 $showRecordFieldListReplace = 'name,first_name,middle_name,last_name,';
-$fe_admin_fieldListReplace  = 'name,first_name,middle_name,last_name,';
 
 
-if($extConf['disableCombinedNameField']) {
+if ($extConf['disableCombinedNameField']) {
 		// shows only the new fields
 	$showItemReplace            = ' first_name, middle_name;;;;, last_name;;2;;,';
 	$showRecordFieldListReplace = 'first_name,middle_name,last_name,';
-	$fe_admin_fieldListReplace  = 'first_name,middle_name,last_name,';
 
 	$TCA['tt_address']['ctrl']['label']           = 'last_name';
 	$TCA['tt_address']['ctrl']['label_alt']       = 'first_name';
@@ -417,16 +413,10 @@ $showRecordFieldListNew = str_replace(
 	$showRecordFieldListReplace,
 	$showRecordFieldListOrig
 );
-$fe_admin_fieldListNew = str_replace(
-	'name,',
-	$fe_admin_fieldListReplace,
-	$fe_admin_fieldListOrig
-);
+
 $TCA['tt_address']['types'][1]['showitem'] = $showitemNew;
 $TCA['tt_address']['interface']['showRecordFieldList'] = $showRecordFieldListNew;
-$TCA['tt_address']['feInterface']['fe_admin_fieldList'] = $fe_admin_fieldListNew;
 
-//-- end splitting name
-
+	// end splitting name
 
 ?>
